--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+cfg.env
 _cfg
 node_modules
 auth-vars.yml
@@ -7,3 +8,4 @@ latest*.yml
 *.bin
 ibm-ingress-deploy-config.yml
 ansible_debug*.log
+rook
